[gd_scene load_steps=29 format=1]

[ext_resource path="res://Scripts/Battle.tres.gd" type="Script" id=1]
[ext_resource path="res://Resources/battle-background-sunny-hillsx1.tex" type="Texture" id=2]
[ext_resource path="res://Scenes/Player_Battle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Monster.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Inteface/Battle UI.png" type="Texture" id=5]
[ext_resource path="res://Resources/Inteface/Attack.png" type="Texture" id=6]
[ext_resource path="res://Resources/Inteface/Attack2.png" type="Texture" id=7]
[ext_resource path="res://Resources/Inteface/Defense.png" type="Texture" id=8]
[ext_resource path="res://Resources/Inteface/Defense2.png" type="Texture" id=9]
[ext_resource path="res://Resources/Inteface/Special.png" type="Texture" id=10]
[ext_resource path="res://Resources/Inteface/Special2.png" type="Texture" id=11]
[ext_resource path="res://Resources/Inteface/Items.png" type="Texture" id=12]
[ext_resource path="res://Resources/Inteface/Items2.png" type="Texture" id=13]
[ext_resource path="res://Resources/Inteface/Run.png" type="Texture" id=14]
[ext_resource path="res://Resources/Inteface/Run2.png" type="Texture" id=15]
[ext_resource path="res://Resources/Inteface/HP.png" type="Texture" id=16]
[ext_resource path="res://Resources/Inteface/HP2.png" type="Texture" id=17]
[ext_resource path="res://Resources/Inteface/SP.png" type="Texture" id=18]
[ext_resource path="res://Resources/Inteface/SP2.png" type="Texture" id=19]
[ext_resource path="res://Resources/Inteface/ST.png" type="Texture" id=20]
[ext_resource path="res://Resources/Inteface/ST2.png" type="Texture" id=21]
[ext_resource path="res://Resources/Inteface/Icon.3_80.png" type="Texture" id=22]
[ext_resource path="res://Resources/Inteface/Icon.2_13.png" type="Texture" id=23]
[ext_resource path="res://Resources/Inteface/Icon.2_84.png" type="Texture" id=24]
[ext_resource path="res://Resources/Music/Blackmoor Tides.mp3.ogg" type="AudioStream" id=25]

[sub_resource type="GDScript" id=1]

script/source = "\nfunc refresh(var new):\n\tnew = int(new)\n\tset_value(new)\n\tget_node(\"Label\").set_text(\"HP \"+str(new*get_node(\"../../../\").get_PLAYER().get_hp_max()/100))\n"

[sub_resource type="GDScript" id=2]

script/source = "\nfunc refresh(var new):\n\tnew = int(new)\n\tset_value(new)\n\tget_node(\"Label\").set_text(\"SP \"+str(new*get_node(\"../../../\").get_PLAYER().get_sp_max()/100))"

[sub_resource type="GDScript" id=3]

script/source = "\nfunc refresh(var new):\n\tnew = int(new)\n\tset_value(new)\n\tget_node(\"Label\").set_text(\"ST\")\n"

[node name="Battle" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 140.182, 254.741 )
transform/scale = Vector2( 2.5, 2.5 )

[node name="Monster" parent="." instance=ExtResource( 4 )]

editor/display_folded = true
transform/pos = Vector2( 773.265, 298.453 )
transform/scale = Vector2( 1.7, 1.7 )

[node name="Interface" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 3, 3 )

[node name="Board" type="Sprite" parent="Interface"]

transform/pos = Vector2( 29.4095, 184.995 )
transform/scale = Vector2( 0.6, 1 )
texture = ExtResource( 5 )
__meta__ = { "_edit_lock_":true }

[node name="Actions" type="Node2D" parent="Interface/Board"]

editor/display_folded = true
transform/pos = Vector2( 48, 0 )
transform/scale = Vector2( 1.3, 1 )
__meta__ = { "_edit_lock_":true }

[node name="Attack" type="TextureButton" parent="Interface/Board/Actions"]

visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -23.0
margin/right = 54.0
margin/bottom = -11.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 6 )
textures/focused = ExtResource( 7 )

[node name="Defense" type="TextureButton" parent="Interface/Board/Actions"]

visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -23.0
margin/right = 54.0
margin/bottom = 1.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 8 )
textures/disabled = ExtResource( 8 )
textures/focused = ExtResource( 9 )

[node name="Special" type="TextureButton" parent="Interface/Board/Actions"]

visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -12.0
margin/right = 54.0
margin/bottom = 1.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
textures/hover = ExtResource( 10 )
textures/disabled = ExtResource( 10 )
textures/focused = ExtResource( 11 )

[node name="Items" type="TextureButton" parent="Interface/Board/Actions"]

visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1.0
margin/right = 54.0
margin/bottom = 13.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
textures/hover = ExtResource( 12 )
textures/disabled = ExtResource( 12 )
textures/focused = ExtResource( 13 )

[node name="Run" type="TextureButton" parent="Interface/Board/Actions"]

visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 12.0
margin/right = 54.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
textures/hover = ExtResource( 14 )
textures/disabled = ExtResource( 14 )
textures/focused = ExtResource( 15 )

[node name="HP" type="TextureProgress" parent="Interface/Board"]

editor/display_folded = true
rect/min_size = Vector2( 0, 10 )
rect/scale = Vector2( 0.7, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = -17.0
margin/right = 68.0
margin/bottom = -7.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 16 )
texture/over = null
texture/progress = ExtResource( 17 )
radial_fill/initial_angle = 2.35099e-38
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = SubResource( 1 )

[node name="Label" type="Label" parent="Interface/Board/HP"]

rect/scale = Vector2( 1.1, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -55.0
margin/top = -1.0
margin/right = -8.0
margin/bottom = 13.0
custom_colors/font_color = Color( 0.695313, 0.00814819, 0.00814819, 1 )
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SP" type="TextureProgress" parent="Interface/Board"]

editor/display_folded = true
rect/scale = Vector2( 0.7, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = -4.0
margin/right = 68.0
margin/bottom = 6.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 18 )
texture/over = null
texture/progress = ExtResource( 19 )
radial_fill/initial_angle = 2.35099e-38
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = SubResource( 2 )

[node name="Label" type="Label" parent="Interface/Board/SP"]

rect/scale = Vector2( 1.2, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -55.0
margin/top = -1.0
margin/right = -8.0
margin/bottom = 13.0
custom_colors/font_color = Color( 0, 0.0236511, 0.605469, 1 )
text = "SP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ST" type="TextureProgress" parent="Interface/Board"]

editor/display_folded = true
rect/scale = Vector2( 0.7, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = 12.0
margin/right = 68.0
margin/bottom = 17.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 20 )
texture/over = null
texture/progress = ExtResource( 21 )
radial_fill/initial_angle = 2.35099e-38
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = SubResource( 3 )

[node name="Label" type="Label" parent="Interface/Board/ST"]

rect/scale = Vector2( 1.2, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -4.0
margin/right = -5.0
margin/bottom = 10.0
custom_colors/font_color = Color( 1, 0.924805, 0.125, 1 )
text = "ST"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fire" type="Sprite" parent="Interface/Board"]

visibility/visible = false
transform/pos = Vector2( -34.8357, 13.4712 )
transform/scale = Vector2( 0.0357143, 0.025 )
texture = ExtResource( 22 )

[node name="Ice" type="Sprite" parent="Interface/Board"]

visibility/visible = false
transform/pos = Vector2( -34.8357, 13.4712 )
transform/scale = Vector2( 0.0357143, 0.025 )
texture = ExtResource( 23 )

[node name="Lightning" type="Sprite" parent="Interface/Board"]

visibility/visible = false
transform/pos = Vector2( -34.8357, 13.4712 )
transform/scale = Vector2( 0.0357143, 0.025 )
texture = ExtResource( 24 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.001
one_shot = false
autostart = true

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 25 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Interface/Board/Actions/Attack" to="." method="_on_Attack_pressed"]

[connection signal="pressed" from="Interface/Board/Actions/Defense" to="." method="_on_Defense_pressed"]

[connection signal="pressed" from="Interface/Board/Actions/Special" to="." method="_on_Special_pressed"]

[connection signal="pressed" from="Interface/Board/Actions/Items" to="." method="_on_Items_pressed"]

[connection signal="pressed" from="Interface/Board/Actions/Run" to="." method="_on_Run_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


